<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0099cc"
    tools:context="com.baech.ProfileCreator" >

    <!--
         The primary full-screen view. This can be replaced with whatever view
         is needed to present your content, e.g. VideoView, SurfaceView,
         TextureView, etc.
    -->

    <ScrollView
        android:id="@+id/fullscreen_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:keepScreenOn="true"
        android:textColor="#33b5e5"
        android:textSize="50sp"
        android:textStyle="bold">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <View
                android:layout_width="match_parent"
                android:layout_height="10dp"
            />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="30dp"
                android:text="@string/description"
                />
            <View
                android:layout_width="match_parent"
                android:layout_height="10dp"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:text="@string/dd_grade_title"
                />
            <Spinner
                android:id="@+id/spinner_grade"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/spinner_grades_arr"
                />
            <View
                android:layout_width="match_parent"
                android:layout_height="10dp"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:text="@string/dd_temp_title"
                />
            <Spinner
                android:id="@+id/spinner_temp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/spinner_grades_arr"
                />
            <View
                android:layout_width="match_parent"
                android:layout_height="10dp"
                />
        </LinearLayout>
	</ScrollView>

    <!--
         This FrameLayout insets its children based on system windows using
         android:fitsSystemWindows.
    -->

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true" >

        <LinearLayout
            android:id="@+id/fullscreen_content_controls"
            style="?metaButtonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:background="@color/black_overlay"
            android:orientation="horizontal"
            tools:ignore="UselessParent" >
            <Button
                android:id="@+id/continue_button"
                style="?metaButtonBarStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/continue_button" />
        </LinearLayout>
    </FrameLayout>

</FrameLayout>
